# claude_trader

./: .env.example  .gitignore  pyproject.toml
.claude/: settings.local.json
docs/: ARCHITECTURE.md  CLOUD_DEPLOYMENT.md  FUTURE_ROADMAP.md  PROJECT_PLAN.md
docs/decisions/: 001_initial_design_choices.md  002_error_handling_and_dry_run.md  003_dynamic_screener.md
logs/live/summaries/: 2026-04-10.md
logs/paper/summaries/: 2026-04-06.md  2026-04-07.md  2026-04-08.md  2026-04-09.md  2026-04-10.md
logs/summaries/: 2026-04-03.md
src/: config.py
src/agent/: orchestrator.py  scheduler.py
src/analysis/: analyst.py  signals.py
src/dashboard/: app.py  controls.py
src/dashboard/static/: style.css
src/dashboard/templates/: base.html  controls.html  cycle_detail.html  cycles.html  diagnostics.html  history.html  overview.html  performance.html  positions.html  report.html  reports.html  summary.html
src/data/: earnings_calendar.py  indicators.py  market_data.py  news.py  options_chain.py  screener.py  universe.py
src/execution/: orders.py
src/logging_utils/: anomaly_log.py  benchmark.py  daily_summary.py  decision_log.py  deposits.py  email_report.py  eod_report.py  performance.py  trade_journal.py
src/portfolio/: portfolio.py  risk.py  sizing.py  trailing_stops.py
src/tools/: deposit.py
